fix: Cutoff wave (#92)
* fix: Cutoff wave

* fix: Remove margin auto

* fix: Add overflow again

--- a/src/components/Pages/SetupPage/SetupPage.module.css
+++ b/src/components/Pages/SetupPage/SetupPage.module.css
@@ -218,8 +218,6 @@
 
   .mobilePreviewContainer :global(.WearablePreview) {
     height: 500px;
-    width: 50%;
-    margin: auto;
   }
 
   .mobilePreviewContainer :global(.loader) {
